agregue el hero

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     
     <h1>mi pagina web ecoomerce</h1>
+    <section class="hero">
+        <h3>Soy el hero</h3>
+    </section>
 </body>
 </html>
