--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <section class="hero">
         <h3>Soy el hero</h3>
     </section>
+    <footer>
+        2024
+    </footer>
 </body>
 </html>
